# ironoxide-cli

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  RELEASING.md  assertionKey.pem.iron  config.json  flake.nix  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml  security-audit.yaml  update-cargo-nix.yaml
src/: main.rs
