[package]
name = "ironoxide-cli"
version = "0.1.0"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
edition = "2024"
rust-version = "1.85.0"

[dependencies]
ironoxide = { version = "4", default-features = false, features = [
    "tls-rustls",
] }
jsonwebtoken = "9.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

[profile.dev.package."*"]
opt-level = 3
