[package]
name = "ironoxide-cli"
version = "0.4.1-pre"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
edition = "2024"
rust-version = "1.88.0"

[dependencies]
ironoxide = { version = "4.4.1", default-features = false, features = [
  "tls-rustls",
] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
